--- a/people/templates/people/people.html
+++ b/people/templates/people/people.html
@@ -15,6 +15,7 @@
     <th class="th_ccell"><h4>WIS</h4></th>
     <th class="th_ccell"><h4>CHA</h4></th>
     <th class="th_ccell"><h4>ROLE</h4></th>
+    <th class="th_ccell"><h4>ADVISOR</h4></th>
     <th class="th_ccell"><h4>NOTES</h4></th>
     <th class="th_ccell"><h4>POLITY</h4></th>
     <th class="th_ccell"><h4></h4></th>
@@ -53,6 +54,13 @@
             <td class="tb_ccell">{{ person.wis }}</td>
             <td class="tb_ccell">{{ person.cha }}</td>
             <td class="tb_lcell">{{ person.leadership_role.name }}</td>
+            <td class="tb_lcell">
+                {% if person.advisor is not None %}
+                    {{ person.advisor.name }}
+                {% else %}
+                    None
+                {% endif %}
+            </td>
             <td class="tb_lcell">{{ person.notes }}</td>
             <td class="tb_lcell">{{ person.polity.name }}</td>
             <td class="tb_ccell">
