Got basic hex-loaded map for the greenbelt.

--- a/territory/templates/territory/base_view.html
+++ b/territory/templates/territory/base_view.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% extends 'table.html' %}
+{% extends 'base.html' %}
 
 {% block subnav_items %}
     <li class="disabled"><a href="#">|</a></li>
