--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet" media="screen">
     <script src="/static/js/bootstrap.js"></script>
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{% static 'css/hexagons.css' %}">
 
     <!-- scripts -->
     <script>
