--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'css/hexagons.css' %}">
+    <script src="/static/js/hexgridwidget.js"></script>
 
     <!-- scripts -->
     <script>
