Set terrain types, with coast and river, for greenbelt map.

--- a/static/css/hexagons.css
+++ b/static/css/hexagons.css
@@ -108,6 +108,25 @@
           transform:translate3d(0,0,0);
 }
 
+
+
+.parent-img {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.image1 {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.image2 {
+  position: absolute;
+  top: 30px;
+  left: 70px;
+}
+
+
 /*** HEXAGON SIZING AND EVEN ROW INDENTATION *****************************************************************/
 @media (min-width:1201px) { /* <- 5-4  hexagons per row */
   #hexGrid{
