--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                         </a>
                     </li>
                     <li role="presentation">
-                        <a href="{% url 'territory:territories' %}">
+                        <a href="{% url 'territory:maps' %}">
                             Territories
                         </a>
                     </li>
