--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'css/hexagons.css' %}">
     <script src="/static/js/hexgridwidget.js"></script>
+    <link rel="stylesheet" href="{% static 'css/grid.css' %}">
+    <script src="jquery.fittext.js"></script>
 
     <!-- scripts -->
     <script>
