--- a/factions/templates/factions/factions.html
+++ b/factions/templates/factions/factions.html
@@ -7,6 +7,8 @@
     <th class="th_ccell"><h4>POLITY</h4></th>
     <th class="th_ccell"><h4>NAME</h4></th>
     <th class="th_ccell"><h4>TYPE</h4></th>
+    <th class="th_ccell"><h4>SIZE</h4></th>
+    <th class="th_ccell"><h4>DESCRIPTION</h4></th>
     <th class="th_ccell"><h4></h4></th>
 {% endblock %}
 
@@ -16,6 +18,8 @@
             <td class="tb_ccell">{{ faction.polity.name }}</td>
             <td class="tb_ccell">{{ faction.name }}</td>
             <td class="tb_ccell">{{ faction.type }}</td>
+            <td class="tb_ccell">{{ faction.size }}</td>
+            <td class="tb_ccell">{{ faction.desc }}</td>
             <td style="text-align: center;">
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'factions:faction_edit' pk=faction.pk %}">
