--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,9 @@
             <h1 style="color: #ffffff;">{{ title }}</h1>
         </div>
 
+        {% block pagination %}
+        {% endblock %}
+
         {% block content %}
         {% endblock %}
     </div>
