--- a/polity/templates/polity/logs.html
+++ b/polity/templates/polity/logs.html
@@ -2,19 +2,28 @@
 
 {% extends 'polity/base.html' %}
 
+
 {% block table_header %}
-    <th><h4>POLITY</h4></th>
-    <th><h4>DATE</h4></th>
-    <th><h4>LOG</h4></th>
+    <th style="text-align: center;"><h4>DATE</h4></th>
+    <th style="text-align: center;"><h4>ENTRY</h4></th>
     <th><h4></h4></th>
 {% endblock %}
 
+{% block pagination %}
+    <div class="well well-sm">
+        {% for year in years %}
+            <a class="btn btn-default" href="{% url 'polity:logs' polity_id=polity_id current_year=year %}">
+                {{ year }}
+            </a>
+        {% endfor %}
+    </div>
+{% endblock %}
+
 {% block table_body %}
-    {% for log_entry in log_entries %}
+    {% for log_entry in logs %}
         <tr>
-            <td>{{ log_entry.polity.name }}</td>
-            <td>{{ log_entry.year }}, {{ log_entry.month.name }} ({{ log_entry.month.equivalent }})</td>
-            <td class="tb_ccell">{{ log_entry.log }}</td>
+            <td style="text-align: center;">{{ log_entry.year }}, {{ log_entry.month.name }} ({{ log_entry.month.equivalent }})</td>
+            <td>{{ log_entry.log }}</td>
             <td style="text-align: center;">
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'polity:log_entry_edit' pk=log_entry.pk %}">
