--- a/polity/templates/polity/logs.html
+++ b/polity/templates/polity/logs.html
@@ -4,13 +4,16 @@
 
 
 {% block table_header %}
-    <th style="text-align: center;"><h4>DATE</h4></th>
+    <th style="text-align: center; width: 12%;"><h4>MONTH</h4></th>
     <th style="text-align: center;"><h4>ENTRY</h4></th>
-    <th><h4></h4></th>
+    <th style="width: 5%;"><h4></h4></th>
 {% endblock %}
 
 {% block pagination %}
     <div class="well well-sm">
+        <a class="btn btn-default" href="{% url 'polity:logs_add_year' polity_id=polity_id %}">
+            <div><span class="glyphicon glyphicon-plus"></span>Add</div>
+        </a>
         {% for year in years %}
             <a class="btn btn-default" href="{% url 'polity:logs' polity_id=polity_id current_year=year %}">
                 {{ year }}
@@ -22,11 +25,11 @@
 {% block table_body %}
     {% for log_entry in logs %}
         <tr>
-            <td style="text-align: center;">{{ log_entry.year }}, {{ log_entry.month.name }} ({{ log_entry.month.equivalent }})</td>
+            <td>{{ log_entry.month.name }} ({{ log_entry.month.equivalent }})</td>
             <td>{{ log_entry.log }}</td>
             <td style="text-align: center;">
                 {% if user.is_authenticated %}
-                    <a class="btn btn-default" href="{% url 'polity:log_entry_edit' pk=log_entry.pk %}">
+                    <a class="btn btn-default" href="{% url 'polity:log_entry_edit' pk=log_entry.pk polity_id=polity_id current_year=current_year %}">
                         <span class="glyphicon glyphicon-pencil"></span>
                     </a>
                 {% endif %}
@@ -36,7 +39,4 @@
 {% endblock %}
 
 {% block table_new_item %}
-    <a class="btn btn-default" href="{% url 'polity:log_entry_new' %}">
-        <div><span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;&nbsp;New</div>
-    </a>
 {% endblock %}
