--- a/polity/templates/polity/logs.html
+++ b/polity/templates/polity/logs.html
@@ -12,7 +12,7 @@
 {% block pagination %}
     <div class="well well-sm">
         <a class="btn btn-default" href="{% url 'polity:logs_add_year' polity_id=polity_id %}">
-            <div><span class="glyphicon glyphicon-plus"></span>Add</div>
+            <span class="glyphicon glyphicon-plus"></span>
         </a>
         {% for year in years %}
             <a class="btn btn-default" href="{% url 'polity:logs' polity_id=polity_id current_year=year %}">
